--- a/purchase_product_configurator/static/description/index.html
+++ b/purchase_product_configurator/static/description/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Sales Analysis</title>
+    <title>Purchase Product Optional</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
     <div class="logos" style="margin-bottom: 20px;">
         <img src="./assets/doodex_odoo.png" alt="Company Logo" style="max-height: 100px;">
     </div>
-    <h1 style="font-size: 3rem; color: #ffffff; font-weight: 700;">Advanced Sales Analysis</h1>
+    <h1 style="font-size: 3rem; color: #ffffff; font-weight: 700;">Purchase Product Optional</h1>
     <p style="font-size: 1.25rem; font-weight: 400;">This custom Odoo module provide the product configurator in purchase.</p>
     <a href="#features" class="btn btn-light btn-lg mt-4" style="background-color: #fff; color: #685563; border: none; padding: 10px 20px; text-decoration: none;">Learn More</a>
 </header>
