[FIX] change icon

--- a/purchase_product_optional/static/description/index.html
+++ b/purchase_product_optional/static/description/index.html
@@ -36,7 +36,7 @@
             <img src="./img/001095_product_price.png" alt="Product Price" style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); margin-bottom: 15px;">
             <img src="./img/001095_product_standard_price.png" alt="Product Price" style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); margin-bottom: 15px;">
             <img src="./img/configurator_price.png" alt="Product Price" style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); margin-bottom: 15px;">
-            <p style="font-weight: bold;">The display price is based on matches vendor we choose in purchase order and the supplier infor of each product. If don't match, then it will default by standard price</p>
+            <p style="font-weight: bold;">The display price is based on matches vendor we choose in purchase order and the supplier info of each product. If don't match, then it will default by standard price</p>
         </div>
     </section>
 
