[FIX] add more description

--- a/purchase_product_optional/static/description/index.html
+++ b/purchase_product_optional/static/description/index.html
@@ -57,6 +57,17 @@
             <li><strong>Odoo Implementation:</strong> We offer end-to-end Odoo implementation services, guiding you through the entire process from initial consultation to final deployment. Our structured approach ensures a smooth transition and rapid adoption of the new system.</li>
             <li><strong>Support and Maintenance:</strong> Our commitment to your success doesn’t end with implementation. We provide ongoing support and maintenance services to ensure that your Odoo system runs smoothly and efficiently, allowing you to focus on your core business activities.</li>
         </ul>
+        <h3 style="font-weight: 700;">Why Choose Doodex?</h3>
+        <ul>
+            <li><strong>Expertise in Odoo:</strong> Our team has a deep understanding of the Odoo platform and its various modules, enabling us to deliver solutions that are both effective and efficient.</li>
+            <li><strong>Customized Solutions:</strong> We believe in providing solutions that are tailored to your specific needs, ensuring maximum ROI.</li>
+            <li><strong>Proven Track Record:</strong> We have successfully implemented Odoo solutions for a wide range of businesses across different industries.</li>
+            <li><strong>Commitment to Quality:</strong> Our focus on quality ensures that every solution we deliver meets the highest standards of excellence.</li>
+            <li><strong>Comprehensive Support:</strong> We offer continuous support and maintenance services to keep your system up-to-date and running smoothly.</li>
+        </ul>
+        <h3 style="font-weight: 700;">Get in Touch</h3>
+        <p>If you are looking for a partner who can provide customized Odoo solutions tailored to your business needs, look no further than Doodex. Visit our website at <a href="https://www.doodex.net/" style="color: #ebac55;">www.doodex.net</a> to learn more about our services and how we can help you achieve your business objectives.</p>
+        <p>Get a free audit <a href="https://www.doodex.net/en/contactus" style="color: #ebac55;">here</a>.</p>
     </section>
 
     <section id="contact" class="contact-section" style="background-color: #f4f4f4; padding: 40px 20px; text-align: center;">
